--- a/Problems/Problems.csproj
+++ b/Problems/Problems.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5955A300-1725-4481-B7AA-2C82BFDC32AF}</ProjectGuid>
+    <ProjectGuid>{CF44D67D-D67C-480A-8EC1-DD5BDD6DE29B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AddTwoNumbers</RootNamespace>
-    <AssemblyName>AddTwoNumbers</AssemblyName>
+    <RootNamespace>Problems</RootNamespace>
+    <AssemblyName>Problems</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -43,10 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ListNode.cs" />
+    <Compile Include="AddTwoNumbers\ListNode.cs" />
+    <Compile Include="AddTwoNumbers\Solution.cs" />
+    <Compile Include="AddTwoNumbers\Tests.cs" />
+    <Compile Include="LongestPalindromicSubstring\Solution.cs" />
+    <Compile Include="LongestSubstringWithoutRepeatingCharacters\Solution.cs" />
+    <Compile Include="LongestSubstringWithoutRepeatingCharacters\Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Solution.cs" />
-    <Compile Include="Tests.cs" />
+    <Compile Include="RegularExpressionMatching\Solution.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
